# zyk_data_structures_in_c

./: .gitignore  CMakeLists.txt  Makefile  README.md  README.zh-CN.md  main.c
.github/: copilot-instructions.md
LinearDS/: linear_list.md  linked_linear_list.c  linked_queues.c  linked_stacks.c  sequential_linear_list.c  warning.c
include/dsc/: Common.h  LinkedBinaryTree.h  LinkedList.h  LinkedQueue.h  LinkedStack.h  SeqBinaryTree.h  SeqList.h  SeqQueue.h  SeqStack.h  Sort.h  Warn.h  linked_stacks.h  readme.md  sequential_linear_list.h  sequential_queues.h  sequential_stacks.h
src/: LinkedBinaryTree.c  LinkedList.c  LinkedQueue.c  LinkedStack.c  README.md  SeqBInaryTree.c  SeqList.c  SeqQueue.c  SeqStack.c  Sort.c  Warn.c  linked_linear_list.c  sequential_linear_list.c  sequential_queues.c  sequential_stacks.c
